# vulpes

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
tests/: integration_test.rs  vulpes.conf
tests/cmd/: help.md
vulpes_config/: Cargo.toml
vulpes_config/src/: config.rs  error.rs  lib.rs  parser.rs
vulpes_parser/: Cargo.toml
vulpes_parser/src/: config.rs  error.rs  lib.rs  parser.rs
vulpes_server/: Cargo.toml
vulpes_server/src/: config.rs  error.rs  lib.rs  server.rs
vulpes_server/src/config/: error.rs  http.rs  location.rs  mod.rs  server.rs  types.rs
vulpes_server/src/processor/: mod.rs
