[package]
name = "vulpes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }

vulpes_config = { path = "./vulpes_config" }

[workspace]
members = [
    "vulpes_config",
]
