[package]
name = "vulpes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.18"

vulpes_parser = { path = "./vulpes_parser" }
vulpes_server = { path = "./vulpes_server" }

[dev-dependencies]
trycmd = "0.14.16"

[workspace]
members = [
    "vulpes_parser",
    "vulpes_server",
]
