[package]
name = "vulpes_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
http = "0.2.9"
httparse = "1.8.0"
log = "0.4.18"
vulpes_parser = { path = "../vulpes_parser" }
